Added FB Canvasing

--- a/src/public/pug/index.pug
+++ b/src/public/pug/index.pug
@@ -3,7 +3,7 @@ html(ng-app="fbSecretSantaApp")
   head
     meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    title(page-title ng-bind="title")
+    title(page-title ng-bind="title") Secret Santa
     link(rel="stylesheet" href="/asset/css/app.css")
     base(href="/")
     script(src="/asset/js/app.js")
