Changed FB request location

--- a/src/public/pug/fbcanvas.pug
+++ b/src/public/pug/fbcanvas.pug
@@ -16,7 +16,7 @@ html
 
   body
     iframe#fb(name='fb')
-    form#post(target='fb' method='POST' action='/index.html')
+    form#post(target='fb' method='POST' action='/')
 
     script.
       const form = document.getElementById('post')
